@@ -4,7 +4,7 @@ set -e
 
 /usr/lib/node_modules/@mdslab/iotronic-lightning-rod/scripts/postuninst
 
-npm uninstall -g statvfs
+#npm uninstall -g statvfs
 
 rm -f /usr/bin/lr_configure
 
